@@ -1,3 +1,12 @@
+TAG: homologyload-tr11886-1
+DATE: 12/24/2014
+STAFF: sc
+CHANGES: Initial tag with
+1) preprocessHGNC.py/sh - renamed from runHGNCQC.py/sh
+2) new clusterer.py
+3) config for hgnc
+4) Install - hgnc added
+
 TAG: homologyload-tr11886-BP
 DATE: 12/22/2014
 STAFF: sc
